[gd_scene load_steps=7 format=2]

[ext_resource path="res://资源文件/icon.png" type="Texture" id=1]
[ext_resource path="res://物理/Area/Area2d.gd" type="Script" id=2]
[ext_resource path="res://资源文件/24font.tres" type="DynamicFont" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 37.0135

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 188, 144 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 491.5, 40 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 708.0
margin_top = 4.0
margin_right = 1018.0
margin_bottom = 447.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="reset" type="Button" parent="VBoxContainer"]
margin_right = 310.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "重置"

[node name="linear_zuni" type="Button" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 310.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
text = "将area2d作为线性阻尼器"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rotate_zuni" type="Button" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 310.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 3 )
text = "将area2d作为旋转阻尼器"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="garvity_add" type="Button" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 310.0
margin_bottom = 172.0
custom_fonts/font = ExtResource( 3 )
text = "将area2d作为重力加速区域"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="area_dete" type="Button" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 310.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 3 )
text = "将area2d作为范围检测使用"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ball" type="RigidBody2D" parent="."]
position = Vector2( 262, 41 )
rotation = 0.00652286
sleeping = true

[node name="Sprite" type="Sprite" parent="ball"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
rotation = 0.943061
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 271, 194 )
__meta__ = {
"_editor_description_": "重力场"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Area2D"]
margin_right = 73.0
margin_bottom = 14.0
text = "gravity area"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2( 177, 512 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2( 341.5, -30 )
shape = SubResource( 2 )

[connection signal="pressed" from="VBoxContainer/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/linear_zuni" to="." method="_on_zuni_pressed"]
[connection signal="pressed" from="VBoxContainer/rotate_zuni" to="." method="_on_rotate_zuni_pressed"]
[connection signal="pressed" from="VBoxContainer/garvity_add" to="." method="_on_garvity_add_pressed"]
[connection signal="pressed" from="VBoxContainer/area_dete" to="." method="_on_area_dete_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
